웹 주소양식 동기화 및 아이콘 변경 및 글자입력 한글로 변경

--- a/App/app/src/main/res/layout/activity_findenroll.xml
+++ b/App/app/src/main/res/layout/activity_findenroll.xml
@@ -25,9 +25,9 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInputmode=korean"
             android:elevation="3dp"
             android:hint="ex) 얼굴에 점이 3개정도 있고 발을 절고 있었어요"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="12sp"
@@ -90,9 +90,9 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:elevation="3dp"
             android:hint="ex) 2023년 3월 21일 오후 4시"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -125,8 +125,9 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex) 2"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:padding="10dp"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/textView26"
@@ -155,9 +156,9 @@
             android:layout_height="45dp"
             android:layout_marginTop="1dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:elevation="3dp"
             android:hint="ex) 검정색"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -172,9 +173,9 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="12dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:elevation="3dp"
             android:hint="ex) 말티즈"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -189,9 +190,9 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:elevation="3dp"
             android:hint="ex) 갈색"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -205,10 +206,10 @@
             android:layout_height="40dp"
             android:layout_marginStart="1dp"
             android:layout_marginTop="1dp"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex) 수컷"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -349,8 +350,8 @@
             android:layout_marginTop="1dp"
             android:background="@color/white"
             android:elevation="3dp"
+            android:privateImeOptions="defaultInput-mode=korean"
             android:hint="ex) 서울특별시"
-            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="15sp"
