--- a/App/app/src/main/res/layout/activity_forumenroll.xml
+++ b/App/app/src/main/res/layout/activity_forumenroll.xml
@@ -93,12 +93,13 @@
                 android:layout_width="294dp"
                 android:layout_height="314dp"
                 android:layout_marginStart="12dp"
+                android:privateImeOptions="defaultInputmode=korean"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="12dp"
                 android:background="@color/white"
                 android:ems="10"
                 android:gravity="top|left"
-                android:inputType="text|textEmailAddress|textMultiLine"
+                android:inputType="textMultiLine"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
@@ -179,6 +180,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="16dp"
             android:background="@color/white"
+            android:privateImeOptions="defaultInputmode=korean"
             android:ems="10"
             android:gravity="center"
             android:inputType="text"
