--- a/App/app/src/main/res/layout/activity_missenroll.xml
+++ b/App/app/src/main/res/layout/activity_missenroll.xml
@@ -27,7 +27,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)date"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="14sp"
@@ -90,7 +90,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)yes or no"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -122,7 +122,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)하얀색"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -138,7 +138,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)3"
-            android:inputType="textEmailAddress"
+            android:inputType="number"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -341,7 +341,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)말티즈"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -357,7 +357,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)갈색"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -373,7 +373,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)서울특별시"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="15sp"
@@ -389,7 +389,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)이름"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -405,7 +405,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)수컷"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -421,7 +421,7 @@
             android:background="@color/white"
             android:elevation="3dp"
             android:hint="ex)온순하고 귀엽습니다"
-            android:inputType="textEmailAddress"
+            android:privateImeOptions="defaultInputmode=korean"
             android:padding="10dp"
             android:textColor="@color/black"
             android:textSize="12sp"
