--- a/App/app/src/main/res/layout/activity_search.xml
+++ b/App/app/src/main/res/layout/activity_search.xml
@@ -50,6 +50,7 @@
                     android:layout_marginEnd="1dp"
                     android:focusable="true"
                     app:iconifiedByDefault="false"
+                    android:privateImeOptions="defaultInput-mode=korean"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
