--- a/App/app/src/main/res/layout/navheader.xml
+++ b/App/app/src/main/res/layout/navheader.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/login_layout"
     android:layout_width="match_parent"
-    android:layout_height="180sp"
+    android:layout_height="195sp"
     android:background="#D9D9D9"
     android:orientation="vertical"
     android:padding="20dp">
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/address"
-        android:layout_width="330sp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="null"
         android:textSize="14sp"
