--- a/src/style/MissPage.scss
+++ b/src/style/MissPage.scss
@@ -60,6 +60,7 @@
 .misspage-chart {
     padding-left: 0.5%;
     padding-right: 0.5%;
+    padding-bottom: 0%;
     margin-top: 1.0%;
     margin-bottom: 0%;
     background-color: #eef5ed;
@@ -74,8 +75,11 @@
         border-radius: 0px 10px 10px 0px;
 
         .miss-pie-p1 {
+            //float: center;
             margin-right: 15px;
+            margin-bottom: 0%;
             padding-top: 5%;
+            padding-left: 10%;
             color: #376330;
         }
     }
