--- a/src/style/FindPage.scss
+++ b/src/style/FindPage.scss
@@ -61,13 +61,16 @@
 
     .find-pie {
         width: 25%;
-        height: 30%;
+        height: 20%;
         float: right;
         background-color: #eef5ed;
         border-radius: 0px 10px 10px 0px;
 
         .find-pie-p1 {
+            margin-right: 15px;
+            margin-bottom: 0%;
             padding-top: 5%;
+            padding-left: 10%;
             color: #376330;
         }
     }
